--- a/index.html
+++ b/index.html
@@ -13,18 +13,16 @@
   <meta property="og:title" content="Progg | Skåne County | Monoganon's Space"/>
   <meta property="og:description" content="We are here. This is Monoganon. We come in love and peace. Greetings, blessings, joy. "/>
   <meta property="og:image" content="Images/Truth.png"/>
-  <meta property="og:image:width" content="2500"/>
-  <meta property="og:image:height" content="1330"/>
+
   <meta property="og:url" content="https://www.monoganon.com"/>
   <meta property="og:site_name" content="monoganon"/>
   <meta property="og:type" content="website"/>
   <meta name="keywords" content=""/>
-  <meta property="fb:admins" content="johnbmckenna"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:title" content="Progg | Skåne County | Monoganon's Space"/>
   <meta name="twitter:description" content="We are here. This is Monoganon. We come in love and peace. Greetings, blessings, joy. "/>
   <meta name="twitter:image" content="Images/Truth.png"/>
-  <link type="text/css" rel="stylesheet" href="css/abc.css" />
+  <link type="text/css" rel="stylesheet" href="CSS/abc.css" />
 
 
 	<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;1,900&display=swap" rel="stylesheet">
