--- a/manifesto.html
+++ b/manifesto.html
@@ -3,7 +3,7 @@
 <head profile="http://www.w3.org/2005/10/profile">
 <link rel="icon"
       type="image/png"
-      href="Images/favicon.ico">
+      href="Images/favicon.png.ico">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,7 +24,7 @@
   <meta name="twitter:title" content="Progg | Skåne County | Monoganon's Space"/>
   <meta name="twitter:description" content="We are here. This is Monoganon. We come in love and peace. Greetings, blessings, joy. "/>
   <meta name="twitter:image" content="Images/Truth.png"/>
-  <link type="text/css" rel="stylesheet" href="css/abc.css" />
+  <link type="text/css" rel="stylesheet" href="CSS/abc.css" />
 
 
 	<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;1,900&display=swap" rel="stylesheet">
