--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <audio autoplay loop preload="auto" src="sounds/nasa.mp3"></audio>
             <audio autoplay loop preload="auto" src="sounds/nasa.mp3" id="audioElement"></audio>
             <audio autoplay loop preload="auto" src="sounds/nasa.mp3" id="audioElement"></audio>
-            <button onclick="document.getElementById('audioElement').paused ? document.getElementById('audioElement').play() : document.getElementById('audioElement').pause(); this.innerHTML = document.getElementById('audioElement').paused ? '⏵' : '⏸'">⏵</button>
+            <button onclick="document.getElementById('audioElement').paused ? document.getElementById('audioElement').play() : document.getElementById('audioElement').pause(); this.innerHTML = document.getElementById('audioElement').paused ? 'Play' : 'Stop'">Play</button>
 
             <img src="Images/ogram.png" alt="ogram runes spelling monoganon" style="width:15vw; height:auto;">
           </div>
