--- a/parttwo.html
+++ b/parttwo.html
@@ -6,12 +6,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {background-color:#000000;background-image:url(monoganon.com/Images/background.gif);background-repeat:repeat;background-position:top left;background-attachment:fixed;}
-h1{text-align:center;font-family:Times, serif;color:#ffffff;background-color:#000000;}
-p {text-align:center;font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:normal;letter-spacing:10px;color:#ffffff;background-color:#000000;}
-</style>
+h1{text-align:center;font-family:Times, serif;color:#ffffff;background-color:#000000;font-size:3vw}
+p {text-align:justify;font-family:Georgia, serif;font-size:2vw;font-style:normal;font-weight:normal;letter-spacing:1vw;color:#ffffff;background-color:#000000; flex-wrap: wrap; overflow-wrap:break-word;}
+</style>    
 </head>
 <body>
 <h1>Killmens Part Two</h1>
-<p>Hello friend, thank you for scanning the QR code on the Killmens album. There used to be a link to a secret album here, but now the album is released and freely accessible on spotify. If you really want to get the mp3s then just send me a message.  </p>
+<p>Hello friend, thank you for scanning the QR code on the Killmens album. 
+    There used to be a link to a secret album here, but now the album is released and freely accessible on spotify. 
+    If you really want to get the mp3s then just send me a message.  </p>
 </body>
 </html>
