font safety net
making sure the correct fonts appear

--- a/manifesto.html
+++ b/manifesto.html
@@ -28,7 +28,7 @@
 
 
 	<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;1,900&display=swap" rel="stylesheet">
-
+  <link href="//db.onlinewebfonts.com/c/e4a357440c07fdfa43d39f16ddde1ba6?family=BodoniW01-Poster" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
